--- a/_config.yml
+++ b/_config.yml
@@ -103,11 +103,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "HyeonJung Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : "Student"
   location         : "Somewhere"
-  email            :
+  email            : "jhikm1003@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
