--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name             : "HyeonJung Park"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "hyeonjung.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Student"
   location         : "Somewhere"
   email            : "jhikm1003@gmail.com"
