--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: 이 또한 맛있으리라
 email: jhikm1003@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hyeonjjung.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: #jekyllrb
 github_username: hyeonjjung
 
